--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Condensed:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
