--- a/index.html
+++ b/index.html
@@ -30,131 +30,134 @@
   </head>
   <body>
     <nav id="navbar" class="sticky">
-      <div class="demo"></div>
-
-      <ul>
-        <li>
-          Project <i class="fas fa-angle-down clr"></i>
-          <ul>
-            <li>
-              <a href="#">Description</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Implementation</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Contribution</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Partnership</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Awards</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-          </ul>
-        </li>
-        <li>
-          WetLab <i class="fas fa-angle-down clr"></i>
-          <ul>
-            <li>
-              <a href="#">Engineering</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Experiments</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Results</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Proof Of Concept</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Parts</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Measurement</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Safety</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Notebook</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-          </ul>
-        </li>
-        <li>
-          DryLab <i class="fas fa-angle-down clr"></i>
-          <ul>
-            <li>
-              <a href="#">Model</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Hardware</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Human Practices <i class="fas fa-angle-down clr"></i>
-          <ul>
-            <li>
-              <a href="#">Integrated HP</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Education</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Communication</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Entrepreneurship</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Inclusivity</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Sustainability</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Team <i class="fas fa-angle-down clr"></i>
-          <ul>
-            <li>
-              <a href="#">Members</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Collaborators</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-            <li>
-              <a href="#">Attributions</a
-              ><span><i class="fas fa-angle-right"></i></span>
-            </li>
-          </ul>
-        </li>
-      </ul>
+      <div class="head">
+        <h1>HYDRAZONE</h1>
+      </div>
+      <div class="sub-head">
+        <ul>
+          <li>
+            Project <i class="fas fa-angle-down clr"></i>
+            <ul>
+              <li>
+                <a href="#">Description</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Implementation</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Contribution</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Partnership</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Awards</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+            </ul>
+          </li>
+          <li>
+            WetLab <i class="fas fa-angle-down clr"></i>
+            <ul>
+              <li>
+                <a href="#">Engineering</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Experiments</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Results</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Proof Of Concept</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Parts</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Measurement</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Safety</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Notebook</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+            </ul>
+          </li>
+          <li>
+            DryLab <i class="fas fa-angle-down clr"></i>
+            <ul>
+              <li>
+                <a href="#">Model</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Hardware</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+            </ul>
+          </li>
+          <li>
+            Human Practices <i class="fas fa-angle-down clr"></i>
+            <ul>
+              <li>
+                <a href="#">Integrated HP</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Education</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Communication</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Entrepreneurship</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Inclusivity</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Sustainability</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+            </ul>
+          </li>
+          <li>
+            Team <i class="fas fa-angle-down clr"></i>
+            <ul>
+              <li>
+                <a href="#">Members</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Collaborators</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+              <li>
+                <a href="#">Attributions</a
+                ><span><i class="fas fa-angle-right"></i></span>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </nav>
     <!-- HEADER -->
     <header id="showcase">
